Major Banks edits on: - Abstract - Introduction - Results
We also removed lots of first person/active voice to academic third
person/passive voice in each of the above sections

--- a/src/1_abstract.tex
+++ b/src/1_abstract.tex
@@ -1,10 +1,10 @@
 \begin{abstract}
-	Recent methods in computer vision and machine learning have enabled fully-autonomous kinematics measurement for Total Knee Arthroplasty implant components.
-	Unfortunately, this same performance does not translate to reverse Total Shoulder Arthroplasty implants.
-	This study explores relating 3D implant orientation to 2D projection sensitivity using the Invariant Angular Radial Transform Descriptor (IARTD).
-	Minor rotational differences yielded negligible shape changes along near-symmetric dimensions like humeral internal-external rotation and tibial internal/external axis.
-	Furthermore, axes problematic for registration correlated with lower descriptor sensitivity.
-	Overall, symmetrical geometries and orientations intrinsically limit extractable silhouette information. However, incorporating bony anatomical landmarks as optimization constraints shows promise for overcoming ambiguity and registration difficulties.
+	Recent advancements in computer vision and machine learning have facilitated fully autonomous kinematics measurement of Total Knee Arthroplasty (TKA) implant components.
+	However, such performance has yet to be effectively replicated for Reverse Total Shoulder Arthroplasty (rTSA) implants. This study examines the correlation between 3D implant orientation and the sensitivity of their 2D projections, employing the Invariant Angular Radial Transform Descriptor (IARTD).
+	It was observed that minor rotational differences along near-symmetric dimensions, such as the humeral internal-external rotation and the tibial internal/external axis, resulted in negligible shape alterations.
+	Moreover, axes that posed challenges in registration were associated with reduced sensitivity of the descriptor.
+	The findings indicate that symmetrical geometries and orientations inherently limit the amount of silhouette information that can be extracted.
+	Nevertheless, the inclusion of bony anatomical landmarks as optimization constraints emerges as a promising approach to mitigate ambiguity and enhance registration accuracy.
 \end{abstract}
 
 %%% Local Variables:
