--- a/src/2_intro.tex
+++ b/src/2_intro.tex
@@ -1,63 +1,62 @@
 \section{Introduction}
 Understanding the in-vivo kinematics of total joint replacement has been essential in implant design, post-operative assessment, and predicting wear and failure patterns for nearly three decades \cite{freglyComputationalWearPrediction2005,banks2003HapPaul2004,banksRationaleResultsFixedBearing2019}.
 Recent advancements in computer vision and machine learning have enabled these analyses for total knee arthroplasty (TKA) in a fully autonomous and clinically practical setting, utilizing single-plane fluoroscopy \cite{brobergValidationMachineLearning2023,jensenJointTrackMachine2023}.
-However, using only a single camera inherently limits the process due to loss of depth perception and the introduction of ambiguous projected shapes during optimization \cite{floodAutomatedRegistration3D2018,mahfouzRobustMethodRegistration2003,zuffiModelbasedMethodReconstruction1999,banksAccurateMeasurementThreedimensional1996}.
-This limitation particularly affected mediolaterally symmetric tibial implants, leading to a phenomenon known as “symmetry traps.”
-In these cases, two distinct 3D orientations of the implant would yield indistinguishable 2D projected geometries.
-To address this, a machine learning algorithm was developed, trained to recognize true anatomic orientations and correct images caught in such optimization minima \cite{jensenCorrectingSymmetricImplantInReview}.
-However, this approach still necessitated that the symmetric implant optimize into one of the two potential local minima corresponding to the identified “symmetry trap”.
+However, using only a single camera inherently limits the optimization due to loss of depth perception and the introduction of ambiguous projected shapes during optimization \cite{floodAutomatedRegistration3D2018,mahfouzRobustMethodRegistration2003,zuffiModelbasedMethodReconstruction1999,banksAccurateMeasurementThreedimensional1996}.
+The observed limitation, predominantly impacting mediolaterally symmetric tibial implants, led to a phenomenon termed “symmetry traps.”
+In such instances, two distinct three-dimensional orientations of the implant produce indistinguishable two-dimensional projected geometries.
+A machine learning algorithm was developed to address these symmetry traps. This algorithm was trained to recognize accurate anatomic orientations and correct images caught in optimization minima \cite{jensenCorrectingSymmetricImplantInReview}.
+However, this approach required the symmetric implant to optimize into one of the two potential local minima, each corresponding to a distinct “symmetry trap.”
 
-Unfortunately, when the same optimization routine and cost function \cite{floodAutomatedRegistration3D2018,jensenJointTrackMachine2023} were applied to reverse total shoulder arthroplasty (rTSA), they significantly underperformed compared to total knee arthroplasty implants.
-This suboptimal optimization manifested in two primary ways.
-Firstly, there was a consistent error along the internal/external rotation axis.
-This axis not only represents near-rotational symmetry but is also the axis whose features are most often occluded by the glenosphere implant in frontal-plane fluoroscopy.
-Secondly, the optimization resulted in a distal shift of the implant.
+The application of the same optimization routine and cost function \cite{floodAutomatedRegistration3D2018,jensenJointTrackMachine2023} to reverse total shoulder arthroplasty (rTSA) resulted in significantly lower performance compared to its application in total knee arthroplasty implants.
+This suboptimal performance manifested in two primary ways.
+First, there was a consistent error along the internal/external rotation axis.
+This axis, characterized by near-rotational symmetry, frequently has features occluded by the glenosphere implant in frontal-plane fluoroscopy.
+Second, the optimization led to a distal shift of the implant.
 This shift meant that while the local minima correctly registered the humeral stem, they failed to do so for the humeral cup.
 
-This pattern of failure prompted a deeper exploration into the psychology of shape \cite{attneaveInformationalAspectsVisual1954,attneaveQuantitativeStudyShape1956}, underscoring the significance of high curvature as a salient feature in binary shapes.
-Additionally, binary distance metric studies \cite{reinkeCommonLimitationsImage2023,reinkeUnderstandingMetricrelatedPitfalls2023}emphasized the need to align the cost-function metric with the problem, considering the data's underlying structure.
-In response to these new findings, and to address the challenges identified with rTSA kinematics optimization, we developed two novel cost functions.
+This pattern of failure prompted a deeper exploration into the perceptual psychology of shape \cite{attneaveInformationalAspectsVisual1954,attneaveQuantitativeStudyShape1956}, underscoring the significance of high curvature as a salient feature in binary shapes.
+Additionally, binary distance metric studies \cite{reinkeCommonLimitationsImage2023,reinkeUnderstandingMetricrelatedPitfalls2023} emphasized the need to align the cost-function metric with the problem, considering the data's underlying structure.
+In response to these new findings and to address the challenges identified with rTSA kinematics optimization, we developed two novel cost functions.
 
 
-To integrate high curvature regions into a novel cost function, we applied Menger’s discrete curvature algorithm \cite{legerMengerCurvatureRectifiability1999} to the projected implant's contour.
-This algorithm facilitated the algorithmic selection of high curvature regions.
-These regions were then utilized in a \emph{Modified Asymmetric Surface Distance}, focusing exclusively on the high-curvature keypoints as surface points (\cref{eq:curv-keypoint}).
-Despite this approach, its application to humeral implants yielded subpar results, replicating the previously encountered errors.
+Menger’s discrete curvature algorithm \cite{legerMengerCurvatureRectifiability1999} was applied to the projected implant's contour to isolate keypoints of the highest curvature.
+Subsequently, a distance map ($DM_{k}$) for each keypoint was calculated, enabling rapid computation of Euclidean distances to these points.
+The high-curvature distance maps were then integrated into a \emph{Modified Asymmetric Surface Distance}, focusing solely on the identified keypoints (\cref{eq:curv-keypoint}).
+In this process, the minimum values from the element-wise multiplication of each distance map ($DM_{k}$) with the projection estimate ($p$) were averaged.
+An error value of 0 would indicate a direct overlap of the estimated projection with all keypoints, confirming accurate registration in high-curvature regions.
+However, this approach, when applied to humeral implants, mirrored previously encountered errors, resulting in poor performance.
 
 \begin{equation}
 	\label{eq:curv-keypoint}
 	\begin{split}
 		\displaystyle J & = \dfrac{\sum_{k \in \mathbb{K}}(\min_{p\in Proj}(p \cdot DM_{k}))}{N} \\
 		                & \text{where}                                                           \\
-		\mathbb{K}      & = \text{Set of all keypoints}                                          \\
-		N               & = \text{Number of keypoints}                                           \\
+		\mathbb{K}      & = \text{Set of all high-curvature keypoints}                           \\
+		N               & = \text{Number of high-curvature keypoints}                            \\
 		DM_{k}          & = \text{Distance map for keypoint $k$}                                 \\
-		p               & = \text{Single point on projection silhouette}
+		p               & = \text{Single point on projection estimate}
 	\end{split}
 \end{equation}
 
-To enhance the previously implemented Hamming Distance \cite{floodAutomatedRegistration3D2018,jensenJointTrackMachine2023}, known for its maximal inaccuracy in cases of non-overlapping geometries, we devised a \emph{Modified Mean Surface Distance}.
-This modification involved calculating the element-wise multiplication of the projection estimate ($Proj_{x,y}$) with the distance map of the target ($DM_{x,y}$), forming a new cost function (\cref{eq:DMCF}).
-However, similar to the first attempt, this approach also resulted in subpar performance.
+In response to the Modified Asymmetric Surface Distance cost function's limitations, there was a shifted focus to refining the Hamming Distance \cite{floodAutomatedRegistration3D2018,jensenJointTrackMachine2023}, especially due to its uniform error in non-overlapping scenarios between the estimate and target mask.
+To overcome this limitation, a \emph{Modified Mean Surface Distance} was developed.
+This involved the element-wise multiplication of the projection estimate ($Proj_{x,y}$) with the global distance map of the target ($DM_{x,y}$) (\cref{eq:DMCF}).
+Similar to the \emph{Modified Asymmetric Surface Distance}, this approach also led to poor results.
 \begin{equation}
 	\label{eq:DMCF}
 	J = \dfrac{ \sum_{(x,y) \in \text{Image}} Proj_{x,y}DM_{x,y} }{\sum_{(x,y)\in \text{Image}}Proj_{x,y}}
 \end{equation}
 
 
-To address these challenges, our study delves into a deeper understanding of the shape fundamentals for each arthroplasty system.
-This is vital for devising a method that can autonomously measure rTSA kinematics from single-plane images.
-Invariant Shape Descriptors offer a mathematically robust approach to describe object shapes, unaffected by changes in scale, translation, or orientation \cite{zhangReviewShapeRepresentation2004}.
-A key advantage of these descriptors lies in their ability to quantify the ``nearness'', ``farness'', and ``uniqueness'' of shapes relative to each other, represented as vector differences.
-Such mathematical properties have been instrumental in various object categorization tasks \cite{richardIdentificationThreeDimensionalObjects1974,wallaceAnalysisThreedimensionalMovement1980,wallaceEfficientThreedimensionalAircraft1980} and even kinematics measurement \cite{banksAccurateMeasurementThreedimensional1996}.
-Specifically, the Invariant Angular Radial Transform Descriptor (IARTD) is notably sensitive to radial differences between shapes \cite{leeNewShapeDescription2012}, enhancing descriptive capabilities beyond Zernike and Hu moments \cite{khotanzadInvariantImageRecognition1990,kimRegionbasedShapeDescriptor2000,leeNewShapeDescription2012}.
-This sensitivity is especially beneficial when contour details are critical.
+The current investigation delves into the fundamental shape aspects of each arthroplasty system, with a focus on developing a method for autonomously measuring rTSA kinematics from single-plane images.
+Central to this is the use of Invariant Shape Descriptors, particularly the Invariant Angular Radial Transform Descriptor (IARTD), which offers a mathematically robust approach to describe object shapes.
+These descriptors are immune to variations in scale, translation, or orientation \cite{zhangReviewShapeRepresentation2004}, and are adept at quantifying the relative ``nearness'', ``farness'', and ``uniqueness'' of shapes as vector differences.
+Such properties are valuable for object categorization \cite{richardIdentificationThreeDimensionalObjects1974,wallaceAnalysisThreedimensionalMovement1980,wallaceEfficientThreedimensionalAircraft1980} and kinematics measurement \cite{banksAccurateMeasurementThreedimensional1996}, with IARTD's sensitivity to radial shape differences \cite{leeNewShapeDescription2012} being particularly beneficial for detailed contour analysis.
 
-This paper is centered on analyzing the sensitivity of projected 2D shapes, as represented by IARTD, to changes in their 3D orientation.
-Central to our investigation is understanding how subtle variations in orientation affect the projected shape, a property which is directly correlated with a shape-based optimization metric.
-The main goal is to highlight the differences that underscore the differences in performance of autonomous kinematics measurements between TKA and rTSA implant systems, as well as understanding any areas for improved imaging methods to boost the algorithm's performance.
-
-
+The focus of this analysis is on the sensitivity of projected 2D shapes, as depicted by IARTD, to changes in their 3D orientation.
+This is key to understanding the impact of subtle orientation variations on the projected shape, an aspect integral to shape-based optimization metrics.
+The ultimate aim is to highlight performance differences in autonomous kinematics measurements between TKA and rTSA implant systems.
+Additionally, the study seeks to identify areas where imaging methods can be improved to boost the algorithm's performance.
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../Jensen_Shape_Sensitivity"
