Edits to: - Results - Discussion
Still need:
- Beefing up discussion on Lie group optimizaiton (with some citations)
- Lots more about using the bone for optimization

--- a/src/4_results.tex
+++ b/src/4_results.tex
@@ -1,7 +1,6 @@
 \section{Results}
-The humeral implant demonstrated the lowest average $\mathbb{S}(\delta_{y})$ value compared to the other implant types (\cref{fig:hum_sensitivity_plot}) (\cref{tab:ss-vals}).
+The humeral implant exhibited the lowest mean $\mathbb{S}(\delta_{y})$ across all implant types (\cref{fig:hum_sensitivity_plot}) (\cref{tab:ss-vals}).
 This rotation represents the final rotation in our Euler rotation sequence (Z-X-Y) and captures the internal/external rotation of the humeral implant.
-The average $\delta_{x}$ value for our humeral implant was the largest among all implants (\cref{tab:ss-vals}).
 Additionally, the surface plotted by the humeral shape sensitivity for all $\delta_{x,y,z}$ is much smoother than any of the other plots, demonstrating the relative lack of shape difference for a wide range of input orientations.
 Several plots showed regions with relatively low sensitivity.
 Specifically, the glenosphere's $\delta_{y}$ sensitivity along the $y=0$ axis (\cref{fig:sca_sensitivity_plot}) and the tibial implant's $\delta_{y}$ sensitivity along the $x=0$ axis (\cref{fig:tib_sensitivity_plot}).
