--- a/src/5_discussion.tex
+++ b/src/5_discussion.tex
@@ -1,21 +1,22 @@
 \section{Discussion}
-The results shown align with many of our intuitive expectations about measuring the sensitivity of projected shape with respect to 3D object orientation, as well as aligned with the regions of difficulty for JTML optimization.
-The humeral implant demonstrated an overall smooth and low shape sensitivity, especially for $\delta_{y}$ rotations (\cref{tab:ss-vals}).
-This axis is the axis along which the humeral implant is the most cylindrical, which means that we would not expect to see a large change in the shape descriptor with minor $\delta_{y}$ rotations.
-Additionally, this is the axis which JTML had the most difficulty with.
+The findings correspond closely with initial expectations regarding the sensitivity measurement of projected shapes relative to 3D object orientation and are consistent with areas challenging for JTML optimization.
+Specifically, the humeral implant showed a generally smooth and minimal shape sensitivity profile, particularly for $\delta_{y}$ rotations (\cref{tab:ss-vals}).
+Along this axis, the humeral implant is the most cylindrical, meaning we would not expect to see a significant change in the shape descriptor with minor $\delta_{y}$ rotations.
+Furthermore, it is noteworthy that this axis presented the most significant difficulties in JTML optimization.
 
-We see similar intuitive results in the glenosphere implant, which had the lowest average $\mathbb{S}(\delta)$ value among all implant types.
-This bulk of the volume of this implant is the articulation surface, which closely resembles a sphere.
-Because the projection of a sphere (a circle) is unchanging with respect to the orientation of a sphere, we would expect that the more closely a shape resembles a sphere, then we should expect a lower overall shape sensitivity.
+Similar intuitive outcomes are observed with the glenosphere implant, which exhibited the lowest average $\mathbb{S}(\delta)$ among all the implant types.
+This implant primarily consists of an articulation surface closely approximating a spherical shape.
+Given that the projection of a sphere (a circle) remains constant regardless of the sphere's orientation, the closer a shape is to a spherical form, the lower its overall shape sensitivity is expected to be.
 
-We see that the shape sensitivity of the tibial implant along the $\delta_{y}$ rotation corroborates our intuition about symmetry traps.
-Along the line defined by $x=0$, we see a consistently low shape sensitivity.
-This internal/external rotation axis is exactly the axis that caused issues with symmetry traps, wherein 2 distinct 3D orientations produce the same projected shape.
-In the context of this analysis, the $\Delta S$ would equal $0$ between those two tibial orientations.
+The observed shape sensitivity of the tibial implant with respect to $\delta_{y}$ rotation aligns with the concept of symmetry traps.
+There is a consistently low shape sensitivity along the line where $x=0$.
+This axis, associated with internal/external rotation, is the same one that contributes to symmetry traps, where two different 3D orientations result in an identical projected shape.
+In terms of this analysis, the $\Delta S$ value would be $0$ for these two orientations of the tibial implant.
 
-Another aspect of Joint Track Machine Learning that this study informs is the current use of Euler angles in our DIRECT-JTA optimization routine.
-Rather than independently varying all angles in a body-centered reference frame, which is insuitable for hyperbox creation, we are presently optimizing over a range of ordered rotations projected via the sequence $R_{z}R_{x}R_{y}$.
-As evidenced by the humeral implant's struggles aligning the $y$-axis, this ordered sequence with a symmetric final axis can impede convergence.
+This study sheds light on an important aspect of Joint Track Machine Learning, particularly the use of Euler angles in the DIRECT-JTA optimization routine.
+Currently, the optimization does not involve independently varying all angles within a body-centered reference frame, as this approach is not conducive to hyperbox creation.
+Instead, optimization is performed over a range of ordered rotations, projected through the sequence $R_{z}R_{x}R_{y}$.
+The challenges the humeral implant encounters in aligning the $y$-axis illustrate that this ordered sequence, especially with a symmetric final axis, can hinder the convergence process.
 
 Beyond the inherent shape sensitivities, such optimization limitations motivate exploring alternatives to Euler angles.
 Performing registration optimization directly on the Special Orthogonal group $SO(3)$ poses an intriguing direction.
