--- a/src/4_results.tex
+++ b/src/4_results.tex
@@ -9,7 +9,7 @@ The femoral implant had the highest average sensitivity ($\frac{\mathbb{S}(\delt
 
 \begin{table}
 	\caption{Average projected-shape sensitivity values for each of the implant models.} \label{tab:ss-vals}
-	\begin{tabularx}{\textwidth}{|X|X|X|X|}\hline
+	\begin{tabularx}{\linewidth}{|X|X|X|X|}\hline
 		{\bf Implant Type} & Average $\mathbb{S}(\delta_{x})$ & Average  $\mathbb{S}(\delta_{y})$ & Average $\mathbb{S}(\delta_{z})$ \\ \hline
 		Humeral            & 8.83                             & 4.82                              & 7.08                             \\\hline
 		Glenosphere        & 6.37                             & 6.22                              & 4.86                             \\\hline
