--- a/Jensen_Shape_Sensitivity.tex
+++ b/Jensen_Shape_Sensitivity.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint,12pt]{elsarticle}
+\documentclass[preprint]{elsarticle}
 
 % Packages for math
 \usepackage{amsmath}
@@ -11,13 +11,15 @@
 \usepackage[capitalize]{cleveref}
 \creflabelformat{equation}{#2\textup{#1}#3}
 \crefdefaultlabelformat{#2\textup{#1}#3}
-% Set your bibliography file here
-% Set line spacing to 1.5
 \usepackage{tabularx}
+\usepackage{mlmodern}
+\usepackage{mdframed}
+\biboptions{sort&compress}
 
 
 \journal{Computers in Biology and Medicine}
 \begin{document}
+\linenumbers
 
 \begin{frontmatter}
 	\title{3D/2D Projected Shape Sensitivity Analysis of Total Joint Arthroplasty Implants}
@@ -30,8 +32,36 @@
 		country={USA}
 	}
 	\input{src/1_abstract.tex}
+	\begin{keyword}
+		Computer vision \sep TKA \sep rTSA \sep Shape Descriptor \sep Angular Radial Transform
+	\end{keyword}
+  \end{frontmatter}
 
-\end{frontmatter}
+  \begin{mdframed}
+	\textcolor{red}{
+	  {\Large TODO} {\footnotesize (I left you some room to write as well)}
+	\begin{itemize}
+	  \item Figures ({\footnotesize please add more if you think we need them, I left you some room })
+			\begin{itemize}
+			  \item Figure showing different rTSA implant/fluoro views
+			  \item Figure showing each of the rotation axes
+			  \item
+			  \item
+			\end{itemize}
+	  \item Verify that there are enough citations and justifications for last two discussion paragraphs
+	  \item Last grammar run through (Academic passive, no first person, no jarring sentences)
+			\begin{itemize}
+			  \item Academic passive voice
+			  \item No first person
+			  \item No Jarring sentences
+			\end{itemize}
+	  \item \\
+	  \item \\
+	  \item \\
+	  \item \\
+	\end{itemize}
+	}
+  \end{mdframed}
 
 
 \input{src/2_intro.tex}
